@@ -1,0 +1,4 @@
+# Site-specific additions and overrides for usr.sbin.slapd.
+# For more details, please see /etc/apparmor.d/local/README.
+
+/dev/urandom rw,
