@@ -1,4 +1,5 @@
 3.5
+	+ Avoid apparmor errors in trusty
 	+ Set version to 3.5
 	+ Migrate previous configuration from 3.3 when upgrading
 3.4
